<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/arial"
        android:text="@string/dialog_all_setting_function_title"
        android:textColor="@color/all_color_black"
        android:textSize="@dimen/sp17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/ll_item_function_control_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_wifi_black_24dp"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_control_wifi"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_function_control_blue_tooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_bluetooth_black_24dp"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_control_blue_tooth"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_function_control_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_location_on_black_24dp"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_control_active_location"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_function_open_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_swap_vert_black_24dp"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_open_data_used_summary"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_function_airplane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_airplanemode_active_black_24dp"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_control_airplane_mode"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_function_volume_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_volume_down_black_24dp"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_control_volume_down"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_function_volume_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_volume_up_black_24dp"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_control_volume_up"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_function_control_sound_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_notifications_active_black_24dp"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_control_sound_mode"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_active_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_highlight_black"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_control_active_flash"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_visual_power_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_power_settings"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_visual_power_button"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_control_rotation_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_screen_rotation"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_control_rotation_mode"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_screen_shot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_screen_shot"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_function_screen_shot"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_item_no_function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp35"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp35"
                android:layout_height="@dimen/dp35"
                android:src="@drawable/ic_add"
                android:tint="@color/all_color_grey"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:fontFamily="@font/arial"
                android:text="@string/item_no_function"
                android:textColor="@color/all_color_grey"
                android:textSize="@dimen/sp14" />
        </LinearLayout>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

